--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                 <img src="images/obrago.png" class="image-project" alt="">
                 <div class="portfolio-layer">
                     <div class="contact">
-                        <a href=""><i class='bx bxl-java' ></i></a>
-                        <a href=""><i class='bx bxs-data' ></i></a>
-                        <a href=""><i class='bx bxl-bootstrap' ></i></a>
-                        <a href=""><i class='bx bxl-javascript' ></i></a>
+                        <a href=""><img src="images/java.png" alt=""></a>
+                        <a href=""><img src="images/mysql.png" alt=""></i></a>
+                        <a href=""><img src="images/bootstrap.png" alt=""></a>
+                        <a href=""><img src="images/html.png" alt=""></a>
                     </div>
                     <a href=""><i class='bx bx-link-external external'></i></a>
                 </div>
@@ -82,10 +82,10 @@
                 <img src="images/futbol.png" class="image-project" alt="">
                 <div class="portfolio-layer">
                     <div class="contact">
-                        <a href=""><i class='bx bxl-java' ></i></a>
-                        <a href=""><i class='bx bxs-data' ></i></a>
-                        <a href=""><i class='bx bxl-bootstrap' ></i></a>
-                        <a href=""><i class='bx bxl-javascript' ></i></a>
+                        <a href=""><img src="images/js.png" alt=""></a>
+                        <a href=""><img src="images/mysql.png" alt=""></a>
+                        <a href=""><img src="images/bootstrap.png" alt=""></a>
+                        <a href=""><img src="images/html.png" alt=""></a>
                     </div>
                     <a href=""><i class='bx bx-link-external external'></i></a>
                 </div>
@@ -102,10 +102,9 @@
                 <img src="images/mvclab.png" class="image-project" alt="">
                 <div class="portfolio-layer">
                     <div class="contact">
-                        <a href=""><i class='bx bxl-java' ></i></a>
-                        <a href=""><i class='bx bxs-data' ></i></a>
-                        <a href=""><i class='bx bxl-bootstrap' ></i></a>
-                        <a href=""><i class='bx bxl-javascript' ></i></a>
+                        <a href=""><img src="images/c-sharp.png" alt=""></a>
+                        <a href=""><img src="images/mysql.png" alt=""></i></a>
+                        <a href=""><img src="images/html.png" alt=""></a>
                     </div>
                     <a href=""><i class='bx bx-link-external external'></i></a>
                 </div>
@@ -121,11 +120,10 @@
             <div class="project-box">
                 <img src="images/cep.png" class="image-project" alt="">
                 <div class="portfolio-layer">
-                    <div class="contact">
-                        <a href=""><i class='bx bxl-java' ></i></a>
-                        <a href=""><i class='bx bxs-data' ></i></a>
-                        <a href=""><i class='bx bxl-bootstrap' ></i></a>
-                        <a href=""><i class='bx bxl-javascript' ></i></a>
+                    <div>
+                        <a href=""><img src="images/html.png" alt=""></a>
+                        <a href=""><img src="images/structure.png" alt=""></a>
+                        <a href=""><img src="images/js.png" alt=""></a>
                     </div>
                     <a href=""><i class='bx bx-link-external external'></i></a>
                 </div>
