--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="" class="logo">JoaoG.</a>
+        <a href="" class="logo">Joao<span>G.</span></a>
         <i class='bx bx-menu' id="menu-icon"></i>
         <nav>
             <a href="#home" class="active homeoption">Home</a>
@@ -30,8 +30,8 @@
                  illo nemo porro sit maiores modi, rem, repellat nihil saepe vel. Blanditiis
                   sed ab eos omnis numquam quos nobis?</p>
             <div class="contact">
-                <a href=""><i class='bx bxl-linkedin'></i></a>
-                <a href=""><i class='bx bx-envelope'></i></a>
+                <a href="https://www.linkedin.com/in/jo%C3%A3o-guilherme-carvalho-novaes/"><i class='bx bxl-linkedin'></i></a>
+                <a href="mailto:joaoguilhermecarvalhonovaes@gmail.com"><i class='bx bx-envelope'></i></a>
                 <a href=""><i class='bx bxl-github'></i></a>
                 <a href=""><i class='bx bxl-whatsapp-square'></i></a>
             </div>
@@ -44,7 +44,7 @@
 
     <section class="about" id="about">
         <div class="about-left">
-            <img src="images/foto.png" alt="">
+            <img class="img-about" src="images/Software code testing.gif" alt="">
         </div>
         <div class="about-right">
             <h2>About <span>me</span></h2>
@@ -120,7 +120,7 @@
             <div class="project-box">
                 <img src="images/cep.png" class="image-project" alt="">
                 <div class="portfolio-layer">
-                    <div>
+                    <div class="contact">
                         <a href=""><img src="images/html.png" alt=""></a>
                         <a href=""><img src="images/structure.png" alt=""></a>
                         <a href=""><img src="images/js.png" alt=""></a>
