--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <header>
         <a href="" class="logo">Joao<span>G.</span></a>
         <i class='bx bx-menu' id="menu-icon"></i>
-        <nav>
-            <a href="#home" class="active homeoption">Home</a>
+        <nav id="navbar">
+            <a href="#home" class="active navoption">Home</a>
             <a href="#about" class="navoption">About</a>
-            <a href="#skills" class="navoption">Skills</a>
+            <a href="#about" class="navoption">Skills</a>
             <a href="#projects" class="navoption">Projects</a>
         </nav>
     </header>
@@ -29,9 +29,7 @@
             <h2>Hello, It's me</h2>
             <h1>João Guilherme</h1>
             <h3>I'm a <span>Frontend Developer</span></h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias hic explicabo
-                 illo nemo porro sit maiores modi, rem, repellat nihil saepe vel. Blanditiis
-                  sed ab eos omnis numquam quos nobis?</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias hic explicaboillo nemo porro sit maiores modi, rem, repellat nihil saepe vel. Blanditiissed ab eos omnis numquam quos nobis?</p>
             <div class="contact">
                 <a href="https://www.linkedin.com/in/jo%C3%A3o-guilherme-carvalho-novaes/"><i class='bx bxl-linkedin'></i></a>
                 <a href="mailto:joaoguilhermecarvalhonovaes@gmail.com"><i class='bx bx-envelope'></i></a>
@@ -40,7 +38,7 @@
             <a href="#"><button class="download-btn">Download CV</button></a>
         </div>
         <div class="right-content">
-            <img src="images/foto.png" alt="Rapaz bonitão">
+            <img src="images/Software code testing.gif" alt="Rapaz bonitão">
         </div>
     </section>
 <!-- ----------ABOUT---------- -->
