--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         <div class="left-content">
             <h2>Hello, It's me</h2>
             <h1>João Guilherme</h1>
-            <h3>I'm a <span>Frontend Developer</span></h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias hic explicaboillo nemo porro sit maiores modi, rem, repellat nihil saepe vel. Blanditiissed ab eos omnis numquam quos nobis?</p>
+            <h3>I'm a <span>Web Developer</span></h3>
+            <p>Tenho 18 anos, atualmente estudante de programação no Instituto Federal de São Paulo, buscando sempre ser melhor a cada dia. Uma breve apresentação desse pequeno aprendiz da vida!</p>
             <div class="contact">
                 <a href="https://www.linkedin.com/in/jo%C3%A3o-guilherme-carvalho-novaes/"><i class='bx bxl-linkedin'></i></a>
                 <a href="mailto:joaoguilhermecarvalhonovaes@gmail.com"><i class='bx bx-envelope'></i></a>
                 <a href="https://github.com/JoaoGuiNovaes"><i class='bx bxl-github'></i></a>
             </div>
-            <a href="#"><button class="download-btn">Download CV</button></a>
+            <a href="Currículo1_João Guilherme.pdf" download="Currículo João Guilherme"><button class="download-btn">Download CV</button></a>
         </div>
         <div class="right-content">
             <img src="images/Software code testing.gif" alt="Rapaz bonitão">
@@ -49,18 +49,19 @@
         </div>
         <div class="about-right">
             <h2>About <span>me</span></h2>
-            <p>Lorem ipsum dolor, Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aut dignissimos ab fugiat, odio itaque excepturi vero dolorum incidunt, reprehenderit, molestias exercitationem repudiandae voluptatum officia tempore a facilis maiores modi? sit amet consectetur adipisicing elit. Reiciendis atque laudantium maiores corrupti error voluptates id itaque praesentium est totam voluptatem fugit, architecto, consequatur, perspiciatis ullam commodi quis excepturi optio!</p>
+            <p>Minha trajetória na programação começou em 2021 quando entrei no curso de Técnico em informática integrado ao ensino médio no Instituto Federal de Educação, Ciência e Tecnologia de São Paulo. Pelo nome eu imaginei que seria algo muito mais voltado para hardware e pacote Office e essas coisas, mas como eu estava enganado...! Foi meu primeiro contato com a programação e no início foi tudo meio complicado pra quem só usava o computador pra jogar, mas aos poucos eu fui me habituando com a prática e comecei a tomar como algo prazeroso. Hoje, está entre meus hobbies como praticar exercícios, jogar jogos competitivos e ler. Me considero uma pessoa mais calma e analítica, e minhas habilidades podem ser observadas nesta sessão e nos meus projetos!</p>
         </div>
     </div>
         <div class="myskills">
-            <img class="hability" src="images/java.png" alt="">
-            <img class="hability" src="images/c-sharp.png" alt="">
-            <img class="hability" src="images/mysql (2).png" alt="">
-            <img class="hability" src="images/github.png" alt="">
-            <img class="hability" src="images/html.png" alt="">
-            <img class="hability" src="images/css-3.png" alt="">
-            <img class="hability" src="images/structure.png" alt="">
-            <img class="hability" src="images/bootstrap.png" alt="">
+            <img class="hability" src="images/java g.png" alt="" title="Java">
+            <img class="hability" src="images/c-sharp g.png" alt="" title="C#">
+            <img class="hability" src="images/mysql g.png" alt="" title="MySQL">
+            <img class="hability" src="images/github g.png" alt="" title="GitHub">
+            <img class="hability" src="images/html-5 g.png" alt="" title="HTML5">
+            <img class="hability" src="images/css-3 g.png" alt="" title="CSS3">
+            <img class="hability" src="images/js g.png" alt="" title="JavaScript">
+            <img class="hability" src="images/atom.png" alt="" title="React.js">
+            <img class="hability" src="images/bootstrap g.png" alt="" title="Bootstrap">
         </div>
     </section>
 <!-- ----------PROJECTS---------- -->
@@ -146,14 +147,24 @@
         
         </div>
     </section>
-
-
-
-
-
-
 </main>
-
+<!-- ----------FOOTER---------- -->
+<footer>
+    <div class="contact-info">
+        <div class="email">
+            <p><i class='bx bxl-gmail' ></i> joaoguilhermecarvalhonovaes@gmail.com</p>
+        </div>
+        <div class="num">
+            <p><i class='bx bx-phone'></i> (11)991936486</p>
+        </div>
+    </div>
+    <p class="copy"> <span>&copy;</span> Portfólio de João Guilherme </p>
+    <div class="arrowup" onclick="scrollToTop()">
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-up-square" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm8.5 9.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707z"/>
+          </svg>
+    </div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
