--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <a href="mailto:joaoguilhermecarvalhonovaes@gmail.com"><i class='bx bx-envelope'></i></a>
                 <a href="https://github.com/JoaoGuiNovaes"><i class='bx bxl-github'></i></a>
             </div>
-            <a href="Currículo1_João Guilherme.pdf" download="Currículo João Guilherme"><button class="download-btn">Download CV</button></a>
+            <a href="Currículo1.2 João Guilherme.pdf" download="Currículo João Guilherme"><button class="download-btn">Download CV</button></a>
         </div>
         <div class="right-content">
-            <img src="images/Software code testing.gif" alt="Rapaz bonitão">
+            <img src="images/fotoeu.png" alt="Rapaz bonitão">
         </div>
     </section>
 <!-- ----------ABOUT---------- -->
@@ -144,7 +144,44 @@
                 </p>
             </div>
         </div>
-        
+        <div class="out-box">
+            <div class="project-box">
+                <img src="images/obrago.png" class="image-project" alt="">
+                <div class="portfolio-layer">
+                    <div class="contact skillsproj">
+                        <div class="projskill"><img src="images/java.png" alt=""></div>
+                        <div class="projskill"><img src="images/mysql.png" alt=""></div>
+                        <div class="projskill"><img src="images/bootstrap.png" alt=""></div>
+                        <div class="projskill"><img src="images/html.png" alt=""></div>
+                    </div>
+                    <a href="https://github.com/JoaoGuiNovaes/ObraGo"><i class='bx bx-link-external external'></i></a>
+                </div>
+            </div>
+            <div class="description">
+                <h3 class="project-tittle">Obra<span>Go</span></h3>
+                <p>Este projeto visa criar uma plataforma para reunir produtos de diferentes lojas. Inclui funcionalidades como cadastro e login para clientes, uma página inicial que exibe produtos de várias lojas, além de recursos completos de cadastro e login para lojas, incluindo operações CRUD para gerenciar seus produtos. Desenvolvido utilizando Java, Servlet, Hibernate, Apache TomCat e páginas .JSP.
+                </p>
+            </div>
+        </div>
+        <div class="out-box">
+            <div class="project-box">
+                <img src="images/obrago.png" class="image-project" alt="">
+                <div class="portfolio-layer">
+                    <div class="contact skillsproj">
+                        <div class="projskill"><img src="images/java.png" alt=""></div>
+                        <div class="projskill"><img src="images/mysql.png" alt=""></div>
+                        <div class="projskill"><img src="images/bootstrap.png" alt=""></div>
+                        <div class="projskill"><img src="images/html.png" alt=""></div>
+                    </div>
+                    <a href="https://github.com/JoaoGuiNovaes/ObraGo"><i class='bx bx-link-external external'></i></a>
+                </div>
+            </div>
+            <div class="description">
+                <h3 class="project-tittle">Obra<span>Go</span></h3>
+                <p>Este projeto visa criar uma plataforma para reunir produtos de diferentes lojas. Inclui funcionalidades como cadastro e login para clientes, uma página inicial que exibe produtos de várias lojas, além de recursos completos de cadastro e login para lojas, incluindo operações CRUD para gerenciar seus produtos. Desenvolvido utilizando Java, Servlet, Hibernate, Apache TomCat e páginas .JSP.
+                </p>
+            </div>
+        </div>
         </div>
     </section>
 </main>
